admission_hook/ImageSecAdmissionValidator.yaml

apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validateImageSecPolicy
webHooks:
  - name: validateImageSec.babyremote.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
    failurePolicy: Fail
    clientConfig:
      url: "https://us-central1-hightowerlabs.cloudfunctions.net/denyenv"
